# talk_to_legends

./: Caddyfile  Dockerfile  LICENSE  README.md  docker-compose.yml  start.sh
backend/: manage.py  pyproject.toml  schema.yml  tracing.py
backend/chat/: llm.py  models.py  serializers.py  urls.py  views.py
backend/chat/migrations/: 0001_initial.py  0002_prompt.py  0003_seed_prompts.py  0004_session_lang.py
backend/config/: settings.py  urls.py  wsgi.py
backend/legends/: models.py  serializers.py  tests.py  urls.py  views.py
backend/legends/migrations/: 0001_initial.py  0002_seed_legends.py  0003_legend_biography_legend_lang.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  main.jsx
