[project]
name = "backend"
version = "0.1.0"
description = "Talk to Legends - Backend"
license = {text = "CC BY-NC-4.0"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datapizza-ai-clients-openai-like>=0.0.11",
    "django>=6.0.3",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.17.1",
    "drf-spectacular>=0.29.0",
    "gunicorn>=25.3.0",
    "python-dotenv>=1.2.2",
    "opentelemetry-api>=1.40.0",
    "opentelemetry-sdk>=1.40.0",
    "opentelemetry-instrumentation-django>=0.61b0",
    "opentelemetry-instrumentation-requests>=0.61b0",
    "opentelemetry-exporter-otlp>=1.40.0",
]
